<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">List Making</string>
    
    
  <!--   <string name="app_name">flu</string> -->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcomeMessage">Did you catch it on the FLU yet?</string>
    <string name="logInButton">Register</string>
    <string name="hintUsername">Username</string>

    <!-- COLORS -->
    <color name="mainPageBackgroundColor">#00000000</color>
    <color name="welcomeMessageColor">#FFFF0000</color>

    <string name="title_activity_events_page">EventsPage</string>
    <string name="eventName">Fundraiser</string>
    <string name="eventLocation">Downtown</string>
    <string name="eventTime">1400 hours</string>
    <string name="title_activity_add_event">Add Event</string>
    <string name="eventNameWhat">Enter Event Name</string>
    <string name="evenLocationWhere">Where is the event?</string>
    <string name="eventTimeWhen">When is it?</string>
    <string name="submitEvent">Done!</string>
    <string name="uploadImage">Upload Event Image</string>
    <string name="title_activity_event_list">EventList</string>
    <string name="oneEventDescription">Bring friends and family!</string>
    <string name="eventDescription">Tell everyone more about the event. (160 characters)</string>
    <string name="goToMaps">Get Directions</string>

</resources>
