<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".AddEvent">
   
<!--

MAKE A CLICKABLE ICON FOR LIKE/DISLIKE   
     -->

 	<EditText
	     android:id="@+id/eventNameWhat"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:layout_gravity="left"
 	     android:paddingLeft="20dip"
	     android:hint="@string/eventNameWhat"
	     android:textSize="20sp"
	     android:textStyle="bold" />

    <EditText
        android:id="@+id/eventLocationWhere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dip"
        android:hint="@string/evenLocationWhere"
        android:layout_gravity="left"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/eventTimeWhen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingLeft="20dip"
        android:hint="@string/eventTimeWhen"
        android:textSize="20sp"
        android:textStyle="bold" />
    
        <EditText
        android:id="@+id/eventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingLeft="20dip"
        android:hint="@string/eventDescription"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <Button 
        android:id="@+id/uploadImageButton"
        android:text="@string/uploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"/>
        <!-- android:onClick="submitEvent"/> -->
    
    
    <Button 
        android:id="@+id/submitEventButton"
        android:text="@string/submitEvent"
        android:layout_marginTop="20dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        />
 
</LinearLayout>